[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/space/spaceship.png" type="Texture" id=1]
[ext_resource path="res://scripts/space/spaceship.gd" type="Script" id=2]
[ext_resource path="res://sprites/space/spaceship_particles.png" type="Texture" id=3]
[ext_resource path="res://scenes/coins_hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/fonts/Retron2000.ttf" type="DynamicFontData" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.155556, 0.733333, 0.948148, 1 )
colors = PoolColorArray( 0.938477, 0.329232, 0.00733185, 1, 0.910156, 0.394721, 0.0533295, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.658537, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( -10, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color_ramp = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.0315
height = 77.0194

[sub_resource type="Animation" id=5]
resource_name = "engine"
tracks/0/type = "value"
tracks/0/path = NodePath("spaceship_particles:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -3, 3 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.960784, 0.258824, 0.258824, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 25.0
expand_margin_right = 25.0
expand_margin_top = 25.0
expand_margin_bottom = 25.0

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 5 )

[node name="spaceship" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="spaceship_particles" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -51.9879, 0 )
amount = 128
speed_scale = 3.0
randomness = 0.72
process_material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="spaceship_sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="spaceship_collider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="spaceship_camera" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="spaceship_animator" type="AnimationPlayer" parent="."]
anims/engine = SubResource( 5 )

[node name="spaceship_tween" type="Tween" parent="."]

[node name="hud" type="CanvasLayer" parent="."]

[node name="coins_hud" parent="hud" instance=ExtResource( 4 )]

[node name="enter_label" type="Label" parent="hud"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -539.0
margin_top = -225.722
margin_right = 539.0
margin_bottom = -118.722
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Press E To Enter Planet"
__meta__ = {
"_edit_use_anchors_": false
}
